--- a/pom.xml
+++ b/pom.xml
@@ -87,12 +87,10 @@
 			<version>5.0.1</version>
 			<scope>compile</scope>
 		</dependency>
-		<!-- Source: https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct-processor</artifactId>
-			<version>1.6.3</version>
-			<scope>compile</scope>
+			<artifactId>mapstruct</artifactId>
+			<version>1.6.3</version> <!-- Use a versão mais estável -->
 		</dependency>
 	</dependencies>
 
